--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}CEBPm{% endblock %}</title>
+    <title>{% block title %}CEBPM{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     {% load static %}
@@ -16,7 +16,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
                 <img src="{% static 'img/LOGOCEB.svg' %}" alt="Logo CEB" style="height: 40px; width: auto;" class="me-2">
-                CEBPm
+                CEBPM
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -96,11 +96,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-futbol me-2"></i>CEBPm</h5>
+                    <h5><i class="fas fa-futbol me-2"></i>CEBPM</h5>
                     <p class="mb-0">Formando campeones desde 1950</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">&copy; 2025 CEBPm. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; 2025 CEBPM. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
