--- a/templates/base.html
+++ b/templates/base.html
@@ -102,6 +102,9 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'profile' %}"><i class="fas fa-user-circle me-2"></i>Mi Perfil</a></li>
+                                {% if user.admin_profile_id %}
+                                    <li><a class="dropdown-item" href="{% url 'admin_panel:dashboard' %}"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a></li>
+                                {% endif %}
                                 {% if user.is_superuser %}
                                     <li><a class="dropdown-item" href="/admin/"><i class="fas fa-cog me-2"></i>Admin Django</a></li>
                                 {% endif %}
