--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}CEBPM{% endblock %}</title>
+    {% load static %}
+    <link rel="icon" type="image/svg+xml" href="{% static 'img/LOGOCEB.svg' %}">
+    <link rel="shortcut icon" type="image/svg+xml" href="{% static 'img/LOGOCEB.svg' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    {% load static %}
     <link href="{% static 'css/forms.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom-colors.css' %}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
